--- a/src/main/resources/getter.template
+++ b/src/main/resources/getter.template
@@ -1,3 +1,3 @@
-public ${fieldType} get${fieldName}() {
-    return ${fieldVariable};
+${getterVisibility} ${fieldType} get${getterName}() {
+    return ${fieldName};
 }
